--- a/app/assets/stylesheets/components/_product.scss
+++ b/app/assets/stylesheets/components/_product.scss
@@ -1,6 +1,6 @@
 .product {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 0 20px 20px 30px;
   border-radius: 3px;
@@ -20,7 +20,7 @@
   font-weight: lighter!important;
   color: #999999;
   margin-bottom: 0;
-  min-height: 40px;
+  line-height: 2.5;
 }
 
 /* Product decsription */
