--- a/app/views/exhibitions/new_step_one.html.erb
+++ b/app/views/exhibitions/new_step_one.html.erb
@@ -1,20 +1,35 @@
+<% content_for :body_id, "form" %>
 <div class="container padded">
   <div class="row">
+    <div class="col-xs-12">
+      <div id="breadcrumb-exhibition">
+        <ul class="list-inline text-center">
+          <li class="active">Choose Category</li>
+          <li>Choose Style</li>
+          <li>Finalize</li>
+        </ul>
+      </div>
+    </div>
     <div class="col-xs-12 col-md-10 col-md-offset-1">
-      <h1>New exhibition</h1>
-      <h2>Select your favorites categories :</h2>
+      <h1 class="text-center padded-mini">Select your favorites categories</h1>
       <form action="<%= new_step2_exhibitions_path %>">
-        <div id="select-category">
+        <div id="select-artwork">
           <% @categories.each do |category| %>
             <% artwork_selected = category.artworks.sample %>
             <label>
-              <input type="checkbox" name="selected_categories[]" value="<%= artwork_selected.category.id %>">
-                  <%= cl_image_tag artwork_picture(artwork_selected), width: 400, height: 400, crop: :fill, class: 'sample-artwork'%>
-                  <p><%= category.name %></p>
+              <div class="select-item">
+                <input type="checkbox" name="selected_categories[]" value="<%= artwork_selected.category.id %>">
+                <div class="artwork-sample">
+                  <%= cl_image_tag artwork_picture(artwork_selected), width: 200, height: 200, crop: :fill %>
+                </div>
+                <p><%= category.name %></p>
+              </div>
             </label>
           <% end %>
         </div>
-        <input type="submit" class="btn btn-primary pull-right">
+        <div class="padded">
+          <input type="submit" class="btn btn-primary-bis btn-lg btn-block" value="Next step">
+        </div>
       </form>
     </div>
   </div>
