--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -31,7 +31,7 @@ $brand-color: #F7C843;
 $yellow: #EAB027;
 $gray: #050505;
 $grey: #F5F5F5;
-$green: #56b976;
+$green: #5ea880;
 
 $red: #EE5F5B;
 $blue: #469AE0;
