--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -4,6 +4,8 @@
  * Feel free to change them and create your own
  * ------------------------------------- */
 
+html { background: $gray }
+
 // Body fix
 body {
   margin-top: 70px!important;
