--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,7 +58,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496659929/Test-image_lrh2to.jpg", width: 400, height: 300, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496659929/Test-image_lrh2to.jpg", width: 250, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">Testestestestestest</p>
             </div>
             <div class="details">
@@ -69,7 +69,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660714/image-sculpture_zxyxpk.jpg", width: 400, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660714/image-sculpture_zxyxpk.jpg", width: 250, height: 350,  crop: :fill, class: 'home-artwork'%>
               <p class="description">Testestestestestest</p>
             </div>
             <div class="details">
@@ -80,7 +80,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660149/image-paint2_nuze49.jpg", width: 400, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660149/image-paint2_nuze49.jpg", width: 250, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">Testestestestestest</p>
             </div>
             <div class="details">
@@ -91,7 +91,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660157/image-digital_aospdv.jpg", width: 400, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660157/image-digital_aospdv.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">Testestestestestest</p>
             </div>
             <div class="details">
@@ -102,7 +102,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660352/image-photo2_advegl.jpg", width: 400, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660352/image-photo2_advegl.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">Testestestestestest</p>
             </div>
             <div class="details">
@@ -113,7 +113,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660154/image-paint_ggbfdg.jpg", width: 400, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660154/image-paint_ggbfdg.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">Testestestestestest</p>
             </div>
             <div class="details">
@@ -124,7 +124,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660360/image-photo_i9gypr.jpg", width: 400, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496676584/image-homepage_yprk5w.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">Testestestestestest</p>
             </div>
             <div class="details">
@@ -135,7 +135,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660716/image-sculpture2_udqsvg.jpg", width: 400, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496660716/image-sculpture2_udqsvg.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">Testestestestestest</p>
             </div>
             <div class="details">
@@ -146,7 +146,7 @@
        <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="artwork-card">
             <div class="content">
-              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496661331/image-moon_i3zbiz.jpg", width: 400, crop: :fill, class: 'home-artwork'%>
+              <%= cl_image_tag "http://res.cloudinary.com/keven/image/upload/v1496661331/image-moon_i3zbiz.jpg", width: 350, height: 350, crop: :fill, class: 'home-artwork'%>
               <p class="description">Testestestestestest</p>
             </div>
             <div class="details">
@@ -216,16 +216,9 @@
         </div>
       </div>
     </div>
-    <div class="row padded-mini">
+  <div class="row padded-mini">
       <hr class="separator">
-      <h3 class="text-center padded-mini" style="font-family: 'Basic', sans-serif;">Last exhibitions created</h3>
-      <ul class="list-inline text-center">
-        <li><img src="http://placehold.it/150x50" alt=""></li>
-        <li><img src="http://placehold.it/150x50" alt=""></li>
-        <li><img src="http://placehold.it/150x50" alt=""></li>
-        <li><img src="http://placehold.it/150x50" alt=""></li>
-        <li><img src="http://placehold.it/150x50" alt=""></li>
-      </ul>
+      <h3 class="text-center padded-mini" style="font-family: 'Basic', sans-serif;">They Work With Us</h3>
     </div>
   </div>
 </div>
