--- a/app/views/exhibitions/_form.html.erb
+++ b/app/views/exhibitions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@exhibition, remote: true) do |f| %>
+<%= simple_form_for(@exhibition) do |f| %>
   <%= f.error_notification %>
   <%= f.input :categories, as: :hidden, :input_html => { :value => @selected_categories_id }  %>
   <%= f.input :styles, as: :hidden, :input_html => { :value => @selected_styles_id }  %>
@@ -6,9 +6,9 @@
   <%= f.input :description %>
   <%= f.input :address %>
   <%= f.input :start_date, :as=> 'string' ,:label => 'Start date', input_html: { id: 'datetimepicker1' } %>
-  <%= f.input :duration, collection: @durations, :as => :radio_buttons %>
-  <%= f.input :min_price, disabled: true, hint: 'You cannot change this field' %>
-  <%= f.input :price, hint: "Must at-least equals minimum price" %>
+  <%= f.input :duration, collection: @durations %>
+  <%= f.input :min_price, label: 'Minimum price', disabled: true, hint: 'You cannot change this field' %>
+  <%= f.input :price, label: "Your price", hint: "Must at-least equals minimum price" %>
   <%= f.input :photos, as: :attachinary %>
   <%= f.button :submit, class: "btn btn-primary" %>
 <% end %>
