--- a/app/views/exhibitions/_form.html.erb
+++ b/app/views/exhibitions/_form.html.erb
@@ -13,8 +13,8 @@
     <input type="hidden" name="exhibition[duration]" value="">
     <div class="duration-input padded-mini">
       <span class="radio">
-        <label for="exhibition_duration_3">
-        <input class="radio_buttons optional" type="radio" value="3" name="exhibition[duration]" id="exhibition_duration_3">3 months
+        <label for="exhibition_duration_3" class="duration-selected">
+        <input class="radio_buttons optional" type="radio" value="3" name="exhibition[duration]" id="exhibition_duration_3" checked="checked">3 months
         </label>
       </span>
       <span class="radio">
