with link and padding artist bid

--- a/app/assets/stylesheets/pages/_dashboard_company.scss
+++ b/app/assets/stylesheets/pages/_dashboard_company.scss
@@ -33,7 +33,7 @@
 
 // Dashboard exhibition bids
 #dashboard .exhibition-bids {
-  padding: 12px 20px;
+  padding: 12px 0px 12px 50px;
 }
 
 #dashboard .bid {
