--- a/app/views/users/show_artist.html.erb
+++ b/app/views/users/show_artist.html.erb
@@ -4,6 +4,10 @@
       <div id="artist-show">
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
           <div class="artist-card text-center">
+          <%= link_to edit_user_registration_path do %>
+            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+          <% end %>
+
             <% artist_picture = @user.facebook_picture_url || 'https://placehold.it/150x150' %>
             <%= image_tag artist_picture, class: 'avatar-large' %>
             <h1><%= @user.first_name %> <%= @user.last_name %></h1>
