--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,28 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>TODO</title>
+    <title>Seeedr | Exhibit the artists of tomorow in your office</title>
+    <meta name="description" content="Seeedr.com helps companies to enlighted their workplace by exhibit young artists into their offices.">
+    <%= favicon_link_tag 'favicon.ico' %>
+
+    <!-- opengraph tags -->
+    <meta property="og:title" content="Seeedr | Exhibit the artists of tomorow in your office" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.seeedr.com/" />
+    <meta property="og:image" content="office.jpg" />
+    <meta property="og:description" content="Seeedr.com helps companies to enlighted their workplace by exhibit young artists into their offices." />
+    <meta property="og:site_name" content="Seeedr.com" />
+    <!-- <meta property="fb:admins" content="" /> -->
+    <!-- <meta property="fb:app_id" content="" /> -->
+
+    <!-- twitter tags -->
+    <meta name="twitter:card" content="office.jpg">
+    <!-- <meta name="twitter:site" content=""> -->
+    <meta name="twitter:title" content="Seeedr | Exhibit the artists of tomorow in your office">
+    <meta name="twitter:description" content="Seeedr.com helps companies to enlighted their workplace by exhibit young artists into their offices.">
+    <!-- <meta name="twitter:creator" content=""> -->
+    <!-- <meta name="twitter:image:src" content=""> -->
+
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
