--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,16 +3,16 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Seeedr | Exhibit the artists of tomorow in your office</title>
-    <meta name="description" content="Seeedr.com helps companies to enlighted their workplace by exhibit young artists into their offices.">
+    <title>Seeedr | Exhibit the artists of tomorrow in your office</title>
+    <meta name="description" content="Seeedr.com helps companies to enlight their workplaces. Find out how to exhibit young artists into your office.">
     <%= favicon_link_tag 'favicon.ico' %>
 
     <!-- opengraph tags -->
-    <meta property="og:title" content="Seeedr | Exhibit the artists of tomorow in your office" />
+    <meta property="og:title" content="Seeedr | Exhibit the artists of tomorrow in your office" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://www.seeedr.com/" />
     <meta property="og:image" content="office.jpg" />
-    <meta property="og:description" content="Seeedr.com helps companies to enlighted their workplace by exhibit young artists into their offices." />
+    <meta property="og:description" content="Seeedr.com helps companies to enlight their workplaces. Find out how to exhibit young artists into your office." />
     <meta property="og:site_name" content="Seeedr.com" />
     <!-- <meta property="fb:admins" content="" /> -->
     <!-- <meta property="fb:app_id" content="" /> -->
@@ -20,8 +20,8 @@
     <!-- twitter tags -->
     <meta name="twitter:card" content="office.jpg">
     <!-- <meta name="twitter:site" content=""> -->
-    <meta name="twitter:title" content="Seeedr | Exhibit the artists of tomorow in your office">
-    <meta name="twitter:description" content="Seeedr.com helps companies to enlighted their workplace by exhibit young artists into their offices.">
+    <meta name="twitter:title" content="Seeedr | Exhibit the artists of tomorrow in your office">
+    <meta name="twitter:description" content="Seeedr.com helps companies to enlight their workplaces. Find out how to exhibit young artists into your office.">
     <!-- <meta name="twitter:creator" content=""> -->
     <!-- <meta name="twitter:image:src" content=""> -->
 
